--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "scripts": {
         "dev": "nodemon server.js",
         "start": "node server.js",
-        "seed": "nodemon seed.js"
+        "seed": "node seed.js"
     },
     "author": "",
     "license": "ISC",
