--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "dependencies": {
         "dotenv": "^16.0.3",
         "express": "^4.18.2",
+        "middlewares": "^0.1.1",
         "mongoose": "^6.8.3"
     },
     "devDependencies": {
