--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "author": "",
     "license": "ISC",
     "dependencies": {
+        "ajv": "^8.12.0",
         "dotenv": "^16.0.3",
         "express": "^4.18.2",
         "middlewares": "^0.1.1",
