--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "license": "ISC",
     "dependencies": {
         "ajv": "^8.12.0",
+        "ajv-formats": "^2.1.1",
         "dotenv": "^16.0.3",
         "express": "^4.18.2",
         "middlewares": "^0.1.1",
