--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "dependencies": {
         "ajv": "^8.12.0",
         "ajv-formats": "^2.1.1",
+        "bcrypt": "^5.1.0",
         "dotenv": "^16.0.3",
         "express": "^4.18.2",
         "middlewares": "^0.1.1",
